tests/ui/higher-ranked/trait-bounds/issue-62203-hrtb-ice.stderr
error[E0271]: expected `{closure@issue-62203-hrtb-ice.rs:40:16}` to return `Unit3`, but it returns `Unit4`
  --> $DIR/issue-62203-hrtb-ice.rs:42:17
   |
LL |     let v = Unit2.m(
   |                   - required by a bound introduced by this call
LL |         L {
LL |             f: |x| {
   |                --- this closure
LL |                 drop(x);
LL |                 Unit4
   |                 ^^^^^ expected `Unit3`, found `Unit4`
   |
note: required for `L<{closure@$DIR/issue-62203-hrtb-ice.rs:40:16: 40:19}>` to implement `for<'r> T0<'r, (&'r u8,)>`
  --> $DIR/issue-62203-hrtb-ice.rs:17:16
   |
LL | impl<'a, A, T> T0<'a, A> for L<T>
   |                ^^^^^^^^^     ^^^^
LL | where
LL |     T: FnMut(A) -> Unit3,
   |                    ----- unsatisfied trait bound introduced here
note: required by a bound in `T1::m`
  --> $DIR/issue-62203-hrtb-ice.rs:27:12
   |
LL |     fn m<'a, B: Ty<'a>, F>(&self, f: F) -> Unit1
   |        - required by a bound in this associated function
LL |     where
LL |         F: for<'r> T0<'r, (<Self as Ty<'r>>::V,), O = <B as Ty<'r>>::V>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `T1::m`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
